# ember

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindEmber.cmake
src/: main.cpp
